liubov-olga compare and combined 25_04_2021, added links reset password

--- a/app/templates/admins/admin_page.html
+++ b/app/templates/admins/admin_page.html
@@ -3,12 +3,12 @@
 HIUSMAGIA parturi kampaamo
 {% endblock %}
 
-<?php
+<!-- <?php
 $env = parse_ini_file('../.env');
 if (!isset($_SESSION['admin']) || $_SESSION['admin']!=1) {
 die;
 }
-?>
+?> -->
 
 {% block content %}
     <h2 class="custom-txt-center custom-margin-bottom-4">TERVETULOA ADMINISTRAATTORIN SIVULLE</h2>  
@@ -31,22 +31,22 @@ die;
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">                       
                         <div>
-                            <h6 class="my-0 text-secondary">ADMIN: <span id="user_name"  style="color:black;"></span>
+                            <h6 class="my-0 text-secondary">ADMIN: <span id="user_name"  style="color:black;">{% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}</span>
                                 </h6>
                         </div>                                                         
                         </li>
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">                       
                         <div>
-                            <h6 class="my-0"><a href="admin_page.php" class="text-danger">Selaa, muokaa, peruuta treenejä</a></h6>
-                            <small class="text-muted">Selaa ja muokaa aikatauluja tai peruuta treenejä</small>
+                            <h6 class="my-0"><a href="{{ url_for('main.admin_page') }}" class="text-danger">Muokaa ja poista palveluita</a></h6>
+                            <small class="text-muted">Muokaa aikatauluja tai poista palveluita</small>
                         </div>                                                         
                         </li>
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
-                            <h6 class="my-0"><a href="new_change_workout.php" class="text-danger">Lisää uusi treeni</a></h6>
-                            <small class="text-muted">Lisää tietoa uudesta treenistä aikatauluun</small>
+                            <h6 class="my-0"><a href="{{ url_for('main.new_change_workout') }}" class="text-danger">Lisää uusi palvelu</a></h6>
+                            <small class="text-muted">Lisää tietoa uudesta palvelusta aikatauluun</small>
                         </div>                    
                         </li>
 
@@ -67,83 +67,94 @@ die;
                 </div>
                 
                 <div class="col-md-8 order-md-1">
-                    <h4 class="mb-4 text-success">TREENIEN SELAAMINEN, MUOKAAMINEN, PERUUTTAMINEN</h4>
+                    <h4 class="mb-4 text-success">PALVELUJEN MUOKAAMINEN JA POISTAMINEN</h4>
                     <form>
                         <!--Row starts-->
                         <div class="row">
                             <form class="form-inline justify-content-center mt-4"  method="get">
                             
                                 <div class="form-group justify-content-center col-md-6 mb-4">
-                                    <label class="mr-4">Alkaen</label>
-                                    <input type="date" class="form-control mr-5" name="date_from" id="date_from">                   
+                                    <!--<label class="mr-4">Alkaen</label>
+                                    <input type="date" class="form-control mr-5" name="date_from" id="date_from">-->
+                                    {{ form.date_from.label }}
+                                    {{ form.date_from(id="date_from", class="form-control mr-5") }}                    
                                 </div>  
                             
                             
                                 <div class="form-group justify-content-center col-md-6 mb-4">
-                                    <label class="mr-4">Saakka</label>
-                                    <input type="date" class="form-control mr-5" name="date_to" id="date_to">
+                                    <!--<label class="mr-4">Saakka</label>
+                                    <input type="date" class="form-control mr-5" name="date_to" id="date_to">-->
+                                    {{ form.date_to.label }}
+                                    {{ form.date_to(id="date_to", class="form-control mr-5") }} 
                                 </div>
 
                                 <div class="form-group justify-content-center col-md-6 mb-4">
-                                    <label class="mr-4">Liikuntalaji</label>
+                                    <!--<label class="mr-4">Liikuntalaji</label>-->
+                                    {{ form.service_titles.label }}
+                                    {{ form.service_titles(id="title", class="form-control mr-5") }}
                                     <!--php starts-->
-                                    <?php
+                                    <!-- <?php
                                     $titles = [];
                                     $query = "SELECT title,id FROM workout_titles ORDER BY title";
                                     $result = $connect->query($query);
-
                                     if ($result->num_rows > 0) {
                                         while ($row = $result->fetch_assoc()) {
                                                 $titles[$row['id']] = $row["title"];
                                             }
                                     }
-                                    ?>
+                                    ?> -->
                                     <!--php ends-->
 
                                     <!--options start-->
-                                    <select id="title" class=form-control name="title">
-                                    <option value="">kaikki liikuntalajit</option>
-                                    <?php
+                                    <!--<select id="title" class=form-control name="title">
+                                    <option value="">kaikki liikuntalajit</option>-->
+                                    <!-- <?php
                                     foreach ($titles as $id => $title) {
                                         echo "<option value=\"$id\">$title</option>";
                                     }
-                                    ?>
-                                    </select>
+                                    ?>-->
+                                    <!--</select>-->
                                     <!--options end-->                                                   
                                 </div>  
                                                         
                                 <div class="form-group justify-content-center col-md-6 mb-4">
-                                    <label class="mr-4">Ohjaaja</label>
+                                    <!--<label class="mr-4">Ohjaaja</label>-->
+                                    {{ form.hairdresser.label }}
+                                    {{ form.hairdresser(id="hairdresser", class="form-control mr-5") }}
                                     <!--php starts-->
-                                    <?php
+                                    <!-- <?php
                                     $titles = [];
                                     $query = "SELECT `name`,id FROM users WHERE trainer='1' ORDER BY `name`";
                                     $result = $connect->query($query);
-
                                     if ($result->num_rows > 0) {
                                         while ($row = $result->fetch_assoc()) {
                                             $trainers[$row['id']] = $row["name"];
                                         }
                                     }
-                                    ?>
+                                    ?> -->
                                     <!--php ends-->
 
                                     <!--options start-->
-                                    <select id="trainer" class=form-control name="trainer" >
-                                    <option value="">kaikki ohjaajat</option>
-                                    <?php
+                                    <!--<select id="trainer" class=form-control name="trainer" >
+                                    <option value="">kaikki ohjaajat</option>-->
+                                    <!-- <?php
                                         foreach ($trainers as $id => $trainer) {
                                             echo "<option value=\"$id\">$trainer</option>";
                                         }
-                                    ?>
-                                    </select>
+                                    ?>-->
+                                    <!--</select>-->
                                     <!--options end-->                     
                                 </div>
                             
-                                <div class="form-group justify-content-center col-md-12 mb-4">
+                                <!--<div class="form-group justify-content-center col-md-12 mb-4">
                                     <button type="submit" name="submit" id="find_workouts" class="btn btn-block mt-0 custom-green-buy">Selaa treenien aikatauluja</button>    
                                     <button type="reset" name="submit" id="" class="btn btn-block mt-2 custom-outline-button">Nollaa kaikki kentät</button> 
-                                </div>
+                                </div>-->
+
+                                <div class="form-group justify-content-center col-md-12 mb-4">
+                                    {{ form.submit( class="btn btn-block mt-0 custom-green-buy", id="find_workouts" ) }}    
+                                    <button type="reset" name="submit" id="" class="btn btn-block mt-2 custom-outline-button">Nollaa kaikki kentät</button> 
+                                </div>                                
                             
                             </form>
                         </div>
