--- a/app/templates/admins/new_change_workout.html
+++ b/app/templates/admins/new_change_workout.html
@@ -3,12 +3,11 @@
 HIUSMAGIA parturi kampaamo
 {% endblock %}
 
-<?php
+<!--<?php
 $error = [
     "date_error" => "", "time_error" => "", "workout_exist" => "",
     "add_error" => "", "add_success" => "", "empty_error" => "", "change_error" => "", "change_success" => ""
 ];
-
 if (!isset($_SESSION['admin']) || $_SESSION['admin']!=1) {
     die;
     }
@@ -17,9 +16,10 @@ if(isset($_GET["workout_id"]) && $_GET["workout_id"]<>"" ){
 $workout_id = $connect->real_escape_string(strip_tags($_GET["workout_id"]));
 $workout_id = filter_var($workout_id, FILTER_SANITIZE_STRING);
 }
-?>
+?>-->
 
 {% block content %}
+<div class="custom-margin-for-form">
     <!--Row starts-->
     <div class="row">
         <div class="col-lg-2">
@@ -29,25 +29,26 @@ $workout_id = filter_var($workout_id, FILTER_SANITIZE_STRING);
             <p></p>
             <form class="custom-form" action="new_change_workout.php?workout_id=<?php echo isset($workout_id) ? $workout_id : ''; ?>" method="post">
 
-                <h2> <?php echo (isset($workout_id)) ? "MUOKAA TREENI" : "UUSI TREENI" ?></h2>
+                <h2>MUOKAA / LISÄÄ PALVELU <?php echo (isset($workout_id)) ? "MUOKAA TREENI" : "UUSI TREENI" ?></h2>
 
-                <?php echo isset($error['workout_exist']) ? $error['workout_exist'] : ''; ?>
+                <!--<?php echo isset($error['workout_exist']) ? $error['workout_exist'] : ''; ?>
                 <?php echo isset($error['add_success']) ? $error['add_success'] : ''; ?>
                 <?php echo isset($error['add_error']) ? $error['add_error'] : ''; ?>
                 <?php echo isset($error['empty_error']) ? $error['empty_error'] : ''; ?>
                 <?php echo isset($error['change_success']) ? $error['change_success'] : ''; ?>
-                <?php echo isset($error['change_error']) ? $error['change_error'] : ''; ?>
+                <?php echo isset($error['change_error']) ? $error['change_error'] : ''; ?>-->
 
-                <?php if (isset($workout_id)) { ?>
+                <!--<?php if (isset($workout_id)) { ?>-->
 
                     <div class="form-group row">
-                        <label class="col-sm-3 col-form-label">ID</label>
+                        <!--<label class="col-sm-3 col-form-label">ID</label>-->
+                        {{ form.service_id.label }} <!--service_id was before workout_id-->
                         <div class="col">
-                            <input id="workout_id" type="number" class="form-control" name="workout_id" id="workout_id" value="<?php echo $workout_id ?>" readonly />
+                            <!--<input id="workout_id" type="number" class="form-control" name="workout_id" id="workout_id" value="<?php echo $workout_id ?>" readonly />-->
+                            {{ form.service_id(id="service_id", class="form-control mr-5", readonly=true) }} 
                         </div>
                     </div>
-                <?php
-
+                <!--<?php
                     $query_select = "SELECT `date`, `time`,free_slots, `status`,trainer_id,`name`, title_id,title FROM workouts_timetable 
                                LEFT JOIN workout_titles ON workouts_timetable.title_id=workout_titles.id 
                                LEFT JOIN users ON workouts_timetable.trainer_id=users.id
@@ -69,76 +70,89 @@ $workout_id = filter_var($workout_id, FILTER_SANITIZE_STRING);
                         $status = $row['status'];
                     }
                 }
-
-                ?>
+                ?>-->
 
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Päivämäärä</label>
+                    <!--<label class="col-sm-3 col-form-label">Päivämäärä</label>-->
+                    {{ form.date.label }}                    
                     <div class="col">
-                        <input type="date" class="form-control" name="date" id="date" value="<?php echo (isset($workout_id)) ? $date : "" ?>" />
-                        <?php echo isset($error['date_error']) ? $error['date_error'] : ''; ?>
+                        <!--<input type="date" class="form-control" name="date" id="date" value="<?php echo (isset($workout_id)) ? $date : "" ?>" />
+                        <?php echo isset($error['date_error']) ? $error['date_error'] : ''; ?>-->                        
+                        {{ form.date(id="date", class="form-control mr-5") }}                        
                     </div>
                 </div>
+
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Ajankohta</label>
+                    <!--<label class="col-sm-3 col-form-label">Ajankohta</label>-->
+                    {{ form.time.label }} 
                     <div class="col">
-                        <input type="time" class="form-control" name="time" id="time" value="<?php echo (isset($workout_id)) ? $time : "" ?>" />
-                        <?php echo isset($error['time_error']) ? $error['time_error'] : ''; ?>
+                        <!--<input type="time" class="form-control" name="time" id="time" value="<?php echo (isset($workout_id)) ? $time : "" ?>" />
+                        <?php echo isset($error['time_error']) ? $error['time_error'] : ''; ?>-->
+                        {{ form.time(id="time", class="form-control mr-5") }} 
                     </div>
                 </div>
+
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Liikuntalaji</label>
-                    <?php
+                    <!--<label class="col-sm-3 col-form-label">Liikuntalaji</label>-->
+                    {{ form.service_titles.label }}                     
+                    <!--<?php
                     $titles = [];
                     $query = "SELECT title,id FROM workout_titles ORDER BY title";
                     $result = $connect->query($query);
-
                     if ($result->num_rows > 0) {
                         while ($row = $result->fetch_assoc()) {
                             $titles[$row['id']] = $row["title"];
                         }
                     }
-                    ?>
+                    ?>-->
                     <div class="col">
-                        <select id="title" class=form-control name="title">
+                        {{ form.service_titles(id="title", class="form-control mr-5") }}
+                        <!--<select id="title" class=form-control name="title">
                             <?php
                             foreach ($titles as $id => $title) {
                                 $select = (isset($workout_id) && ($title == $workout_title)) ? "selected" : "";
                                 echo "<option value=\"$id\" $select>$title</option>";
                             }
                             ?>
-                        </select>
+                        </select>-->
                     </div>
                 </div>
 
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Ohjaaja</label>
+                    <!--<label class="col-sm-3 col-form-label">Ohjaaja</label>-->
+                    {{ form.hairdresser.label }}
                     <div class="col">
-                        <select id="trainer" class=form-control name="trainer" value="<?php echo (isset($workout_id)) ? $trainer : "" ?>">
-                        </select>
+                        {{ form.hairdresser(id="hairdresser", class="form-control mr-5") }}
+                        <!--<select id="trainer" class=form-control name="trainer" value="<?php echo (isset($workout_id)) ? $trainer : "" ?>">
+                        </select>-->
                     </div>
                 </div>
 
-                <div class="form-group row">
+                <!--<div class="form-group row">
                     <label class="col-sm-3 col-form-label">Vapaat paikat</label>
                     <div id= "free_max_slots" class="col">                        
                     </div>
-                </div>
+                </div>-->
+
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">Tila</label>
+                    <!--<label class="col-sm-3 col-form-label">Tila</label>-->
+                    {{ form.status.label }}
                     <div class="col">
-                        <?php $select = isset($workout_id) ? $status : "" ?>
+                        {{ form.status(id="status", class="form-control mr-5") }}
+                        <!--<?php $select = isset($workout_id) ? $status : "" ?>
                         <select id="status" class=form-control name="status" value="<?php echo (isset($_GET['workout_id'])) ? $status : "" ?>">
                             <option value="Future" <?php echo (($select == "future") ? "selected" : "") ?>>Tuleva</option>
                             <option value="Done" <?php echo (($select == "done") ? "selected" : "") ?>>Päättynyt</option>
                             <option value="Canceled" <?php echo (($select == "canceled") ? "selected" : "") ?>>Peruutettu</option>
-                        </select>
+                        </select>-->
                     </div>
                 </div>
 
-                <button type="submit" name="submit" id="submit" class="btn btn-lg btn-block custom-outline-button">
+                <!--<button type="submit" name="submit" id="submit" class="btn btn-lg btn-block custom-outline-button">
                     <?php echo (isset($workout_id)) ? "Muokaa" : "Lisää" ?>
-                </button>
+                </button>-->
+
+                {{ form.submit( class="btn btn-lg btn-block custom-outline-button", id="submit" ) }}  
 
                 <p></p>
 
@@ -149,6 +163,7 @@ $workout_id = filter_var($workout_id, FILTER_SANITIZE_STRING);
         </div>
     </div>
     <!--Row ends-->
+</div>
 {% endblock %}
 
 <script type="text/javascript" src="trainer_select.js"></script>
