--- a/app/templates/customers/client_page.html
+++ b/app/templates/customers/client_page.html
@@ -25,7 +25,7 @@ HIUSMAGIA parturi kampaamo
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">                       
                         <div>
-                            <h6  class="my-0 text-secondary">ASIAKAS: <span id="user_name"  style="color:black;"></span></h6>
+                            <h6  class="my-0 text-secondary">ASIAKAS: <span id="user_name"  style="color:black;">{% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}</span></h6>
                         </div>                                                         
                         </li>
 
@@ -38,8 +38,8 @@ HIUSMAGIA parturi kampaamo
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
-                            <h6 class="my-0"><a href="reservation.php" class="text-danger">Varaa aika</a></h6>
-                            <small class="text-muted">Varaa ajka ohjaajalle tai ryhmäharjoitteluun</small>
+                            <h6 class="my-0"><a href="{{ url_for('main.reservation') }}" class="text-danger">Varaa aika</a></h6>
+                            <small class="text-muted">Varaa ajka valitsemasi osaajalle</small>
                         </div>                    
                         </li>                                     
                     </ul>               
@@ -55,24 +55,22 @@ HIUSMAGIA parturi kampaamo
                                 <div class="form-group justify-content-center col-md-6 mb-4">
                                     <!--<label class="mr-4">Alkaen</label>
                                     <input type="date" class="form-control mr-5" name="date_from" id="date_from">--> 
-                                    <div >
-                                          {{ form.date_from(id="date_from") }}
-                                    </div>
+                                    {{ form.date_from.label }}
+                                    {{ form.date_from(id="date_from", class="form-control mr-5") }}                                    
                                 </div>  
                             
                             
                                 <div class="form-group justify-content-center col-md-6 mb-4">
-                                <!--<label class="mr-4">Saakka</label>
-                                <input type="date" class="form-control mr-5" name="date_to" id="date_to">-->
-                                     <div >
-                                        {{ form.date_to(id="date_to") }}
-                                    </div>
+                                    <!--<label class="mr-4">Saakka</label>
+                                    <input type="date" class="form-control mr-5" name="date_to" id="date_to">-->
+                                    {{ form.date_to.label }}
+                                    {{ form.date_to(id="date_to", class="form-control mr-5") }}                                    
                                 </div>
                             
-                                <div class="form-group justify-content-center col-md-12 mb-4">
-                                 <!--<button type="submit" class="btn btn-block mt-0 custom-green-buy" id="client_select">Valitse ajanjakso</button>-->
-                                 <div id="client_select">
-                                 {{ form.submit( class="btn btn-block mt-0 custom-green-buy", id="client_select" ) }}
+                                <div class="form-group justify-content-center col-md-12 mb-4">                                 
+                                <div id="client_select">
+                                    <!--<button type="submit" class="btn btn-block mt-0 custom-green-buy" id="client_select">Valitse ajanjakso</button>-->
+                                    {{ form.submit( class="btn btn-block mt-0 custom-green-buy", id="client_select" ) }}
                                 </div>
                                 <button type="reset" class="btn btn-block mt-2 custom-outline-button" name="submit" id="">Nollaa kaikki kentät</button> 
                                 </div>
