--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -50,7 +50,7 @@ if (isset($_COOKIE['user_id'])) {
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- <script src="/js/date.js"></script> -->
     <script src="{{ url_for('static', filename='/js/date.js') }}"></script>
-    <link rel="icon" type="image/x-icon" href="/<?= $env['app_dir'] ?>/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='/pics/favicon.ico')}}"> 
     
   </head>
 
@@ -75,7 +75,7 @@ if (isset($_COOKIE['user_id'])) {
             </a>
             <a 
               href="{{ url_for('main.trainers') }}" 
-              class="nav-item nav-link">OHJAAJAT
+              class="nav-item nav-link">PALVELUT
             </a>
             <a 
               href="{{ url_for('main.feedback') }}" 
@@ -84,47 +84,47 @@ if (isset($_COOKIE['user_id'])) {
           </div>
             
           <div class="navbar-nav">
-            
-            <a  href="" 
+            <a href="{{ url_for('main.admin_page') }}" class="nav-item nav-link">
+              <i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
+            </a>
+
+            {% if current_user.is_authenticated %}  
+            <a  href="cart/cart.html" 
               class="nav-item custom-cart-link"><i class="bi bi-cart"></i>
-            </a>
-
+            </a>           
             
-
-            <a  
-                href="{{ url_for('main.client_page') }}" 
-                class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
-            </a>
-
+            <div class="nav-item dropdown">
+              <a href="{{ url_for('main.client_page') }}" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">
+                <i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
+              </a>
+              <div class="dropdown-menu"> 
+                  <a href="{{ url_for('main.client_page') }}" class="dropdown-item">Minun aikatauluni</a>
+                  <a href="{{ url_for('main.reservation') }}" class="dropdown-item">Varaa aika</a>                 
+                  <a href="{{ url_for('auth.change_password') }}" class="dropdown-item">Vaihda salasana</a>
+                  <a href="{{ url_for('auth.change_email_request') }}" class="dropdown-item">Vaihda sähköposti</a>                  
+              </div>
+            </div>
             
-            <a 
-                href="" 
-                class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
-            </a>
-            
-            <a 
-                href="" 
-                class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
-            </a>
-            <?php
-              }
-            ?>
-
             <a  
                 href="{{ url_for('auth.logout') }}" 
                 class="nav-item nav-link">Kirjaudu ulos
             </a>
-            
+
+            {% else %}              
+
+              <a  
+                href="{{ url_for('auth.login') }}" 
+                class="nav-item nav-link">
+                <i class="bi bi-person-circle" style="font-size:18px;"></i>
+              </a>
+
               <a 
                   href="{{ url_for('auth.register') }}"
                   class="nav-item nav-link">Luo tili
-              </a>
-              <a 
-                  href="{{ url_for('auth.login') }}" 
-                  class="nav-item nav-link"><i class="bi bi-person-circle" style="font-size:18px;"></i>
-              </a>
-            <!-- <?php
-            } ?> -->
+              </a>              
+              
+            {% endif %}
+          
           </div>
         </div>
       </nav>
