cancel reservation works, but without env.variable HIUSMAGIA_ADMIN

--- a/app/templates/customers/client_page.html
+++ b/app/templates/customers/client_page.html
@@ -119,6 +119,7 @@ HIUSMAGIA parturi kampaamo
     </div>
     <!--Row ends-->
 <script type="text/javascript" src="{{ url_for('static', filename='/js/client_reserv_select.js') }}"></script>   
+<script type="text/javascript" src="{{ url_for('static', filename='/js/cancel_reservation.js') }}"></script>
 {% endblock %}
 
 <script type="text/javascript" src="client_reserv_select.js"></script>
