Admin page: futction -show all reservations works.

--- a/app/templates/admins/admin_page.html
+++ b/app/templates/admins/admin_page.html
@@ -49,6 +49,12 @@ die;
                             <small class="text-muted">Lisää tietoa uudesta palvelusta aikatauluun</small>
                         </div>                    
                         </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="my-0"><a href="{{ url_for('main.reservation_admin') }}" class="text-danger">Näytä varaukset</a></h6>
+                                <small class="text-muted">***********</small>
+                            </div>                    
+                            </li>
 
                         <!--<li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
