--- a/app/templates/admins/reservation_admin.html
+++ b/app/templates/admins/reservation_admin.html
@@ -45,7 +45,7 @@ die;
 
                         <li class="list-group-item d-flex justify-content-between lh-condensed">
                         <div>
-                            <h6 class="my-0"><a href="{{ url_for('main.new_change_workout') }}" class="text-danger">Lisää uusi palvelu</a></h6>
+                            <h6 class="my-0"><a href="{{ url_for('main.new_service') }}" class="text-danger">Lisää uusi palvelu</a></h6>
                             <small class="text-muted">Lisää tietoa uudesta palvelusta aikatauluun</small>
                         </div>                    
                         </li>
