--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,13 +1,24 @@
 {% extends "layout.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-
-{% block title %}HIUSMAGIA - Register{% endblock %}
+{% block title %}
+HIUSMAGIA Luo tili
+{% endblock %}
 
 {% block content %}
-<div class="page-header">
-    <h1>Register</h1>
-</div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-</div>
-{% endblock %}
+<div class="custom-margin-for-form">
+    <!--Row starts-->
+    <div class="row">
+        <div class="col-lg-4">        
+        </div>
+
+        <div class="col-lg-4">
+            <h2>LUO TILI</h2>
+            {{ wtf.quick_form(form) }}    
+        </div>
+
+        <div class="col-lg-4">        
+        </div>
+    </div>
+    <!--Row ends--> 
+</div> 
+{% endblock %} 
