--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -84,15 +84,16 @@ if (isset($_COOKIE['user_id'])) {
           </div>
             
           <div class="navbar-nav">
+            {% if current_user.admin==1 %} 
             <a href="{{ url_for('main.admin_page') }}" class="nav-item nav-link">
               <i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
             </a>
-
+            {% endif %}
             {% if current_user.is_authenticated %}  
             <a  href="cart/cart.html" 
               class="nav-item custom-cart-link"><i class="bi bi-cart"></i>
             </a>           
-            
+            {% if current_user.admin!=1 %}
             <div class="nav-item dropdown">
               <a href="{{ url_for('main.client_page') }}" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">
                 <i class="bi bi-person-circle" style="font-size:18px; color:lightgreen;"></i>
@@ -104,7 +105,7 @@ if (isset($_COOKIE['user_id'])) {
                   <a href="{{ url_for('auth.change_email_request') }}" class="dropdown-item">Vaihda sähköposti</a>                  
               </div>
             </div>
-            
+            {% endif %}
             <a  
                 href="{{ url_for('auth.logout') }}" 
                 class="nav-item nav-link">Kirjaudu ulos
